--- a/src/components/Header/styles.module.css
+++ b/src/components/Header/styles.module.css
@@ -4,7 +4,12 @@ header {
     left: 0;
     right: 0;
 
-    height: 3.5rem;
+    height: var(--header-height);
+    background-color: rgba(158, 158, 158, 0.3);
+    backdrop-filter: blur(5px);
+    mix-blend-mode: screen;
+
+    border-bottom: 3px solid #686868;
 }
 
 nav {
@@ -14,10 +19,12 @@ nav > ul {
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 1rem;
+    gap: 150px;
 
     height: 100%;
 }
 nav > ul > a {
     color: var(--vt-c-white-mute);
+    color: rgb(255, 255, 255);
+    font-weight: 500;
 }
