--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -9,7 +9,12 @@
   font-weight: normal;
 }
 
-a,
+a {
+  text-decoration: none;
+  color: blue;
+}
+
+// a,
 .green {
   text-decoration: none;
   color: hsla(160, 100%, 37%, 1);
