--- a/src/assets/base.scss
+++ b/src/assets/base.scss
@@ -62,6 +62,10 @@
   font-family: 'Montserrat-Regular';
   src: local('Montserrat-Regular'), url('@/assets/fonts/Montserrat-Regular.ttf') format('opentype');
 }
+@font-face {
+  font-family: 'Montserrat-SemiBold';
+  src: local('Montserrat-SemiBold'), url('@/assets/fonts/Montserrat-SemiBold.ttf') format('opentype');
+}
 
 @media (prefers-color-scheme: dark) {
   :root {
@@ -106,4 +110,11 @@ li {
 
 p {
   font-size: 16px;
+}
+
+input,
+button,
+textarea {
+  border: none;
+  outline: none;
 }
