--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -1,4 +1,4 @@
-header {
+.header {
     position: fixed;
     inset: 0;
     bottom: auto;
@@ -11,7 +11,6 @@ header {
     height: var(--header-height);
     background-color: rgba(158, 158, 158, 0.3);
     backdrop-filter: blur(5px);
-    // mix-blend-mode: screen;
 
     border-bottom: 1px solid #686868;
     z-index: 100;
