--- a/src/features/gallery/styles.module.scss
+++ b/src/features/gallery/styles.module.scss
@@ -30,6 +30,8 @@
             translate: 0 -50%;
             z-index: 3;
 
+            transition: .5s;
+
             height: 100%;
 
             display: flex;
