lots of new changes

--- a/src/assets/base.scss
+++ b/src/assets/base.scss
@@ -102,6 +102,10 @@ body {
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  &.prevent-scroll {
+    overflow: hidden;
+  }
 }
 
 li {
