--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -10,9 +10,9 @@
 
     height: var(--header-height);
     background-color: rgba(158, 158, 158, 0.3);
-    backdrop-filter: blur(5px);
+    backdrop-filter: blur(10px);
 
-    border-bottom: 1px solid #686868;
+    border-bottom: 1px solid var(--color-border);
     z-index: 100;
 
     & .logo-title {
@@ -34,7 +34,7 @@ nav > ul {
     height: 100%;
 }
 nav > ul a {
-    color: var(--vt-c-white-mute);
+    color: var(--white-mute);
     color: rgb(255, 255, 255);
     font-weight: 500;
 }
