--- a/src/features/info/styles.module.scss
+++ b/src/features/info/styles.module.scss
@@ -11,37 +11,52 @@
     display: flex;
     flex-direction: column;
     gap: 20px;
-}
-.blocks-container {
-    display: flex;
-    // flex-wrap: wrap;
-    gap: 20px;
+
+    width: 100%;
 }
 
-.description-container {
+.info {
     display: flex;
-    flex-direction: column;
-    gap: 80px;
-    width: 470px;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
 
-    & > .description {
+    .blocks {
         display: flex;
         flex-direction: column;
-        gap: 30px;
-
-        & > h3 {
-            font-family: 'Montserrat-ExtraBold';
-            font-weight: 800;
-            font-size: 20px;
-            line-height: 24px;
-            color: white;
+        gap: 20px;
+    
+        .blocks-container {
+            display: flex;
+            // flex-wrap: wrap;
+            gap: 20px;
         }
-        & > p {
-            font-family: 'Montserrat-Regular';
-            font-weight: 400;
-            font-size: 16px;
-            line-height: 18px;
-            color: white;
+    }
+    .description-container {
+        display: flex;
+        flex-direction: column;
+        gap: 80px;
+        width: 470px;
+    
+        & > .description {
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+    
+            & > h3 {
+                font-family: 'Montserrat-ExtraBold';
+                font-weight: 800;
+                font-size: 20px;
+                line-height: 24px;
+                color: white;
+            }
+            & > p {
+                font-family: 'Montserrat-Regular';
+                font-weight: 400;
+                font-size: 16px;
+                line-height: 18px;
+                color: white;
+            }
         }
     }
 }
