--- a/src/components/GallerySlider/styles.module.scss
+++ b/src/components/GallerySlider/styles.module.scss
@@ -3,6 +3,12 @@
     --item-width: 30%;
     --arrow-width: 10vh;
 
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
+    height: 100%;
+
     .slider-wrapper {
         position: relative;
 
@@ -13,8 +19,6 @@
             gap: var(--spaces);
     
             padding-inline: calc(var(--spaces) * 2);
-    
-            transition: .3s ease-in-out;
         
             .gallery-slider__item {
                 flex: 0 0 var(--item-width);
@@ -77,8 +81,6 @@
         flex-direction: row;
         justify-content: center;
         column-gap: 10px;
-
-        margin-top: 60px;
 
         .dot {
             width: 10px;
