--- a/src/features/about/styles.module.scss
+++ b/src/features/about/styles.module.scss
@@ -4,7 +4,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding-block: var(--header-height);
+    padding-block: 100px;
 
     height: 100%;
 
@@ -22,7 +22,7 @@
             gap: 20px;
 
             & input {
-                height: 70px;
+                height: 55px;
             }
             & textarea {
                 height: 200px;
@@ -42,21 +42,44 @@
                 font-size: 20px;
                 line-height: 24px;
                 color: white;
+
+                &::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+                    @include input-placeholder;
+                    opacity: 1; /* Firefox */
+                }
+                &:-ms-input-placeholder { /* Internet Explorer 10-11 */
+                    @include input-placeholder;
+                }
+                &::-ms-input-placeholder { /* Microsoft Edge */
+                    @include input-placeholder;
+                }
             }
         }
     }
     & > section.info {
         display: flex;
         flex-direction: column;
-        justify-content: space-between;
+        gap: 65px;
         flex-basis: 30%;
 
-        height: 100%;
+        margin-top: auto;
 
         & > .articles {
             display: flex;
             flex-direction: column;
-            gap: 80px;
+            gap: 65px;
+
+            & > article {
+                display: flex;
+                flex-direction: column;
+                row-gap: 10px;
+
+                & > .article-content {
+                    display: flex;
+                    flex-direction: column;
+                    row-gap: 5px;
+                }
+            }
         }
         & > .socials {
             display: flex;
