--- a/src/features/contact/styles.module.scss
+++ b/src/features/contact/styles.module.scss
@@ -38,8 +38,8 @@
                 & > main {
                     & > .subscribe-form {
                         display: flex;
-                        width: 100%;
-                        height: 70px;
+                        width: 80%;
+                        height: 55px;
 
                         overflow: hidden;
                         border-radius: 5px;
@@ -48,22 +48,20 @@
                             flex-basis: 70%;
                             padding: 20px;
 
-                            font-weight: 600;
+                            font-family: 'Montserrat-Regular';
                             font-size: 20px;
                             line-height: 150%;
                             color: black;
 
                             &::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
-                                color: black;
+                                color: var(--color-input-placeholder);
                                 opacity: 1; /* Firefox */
                             }
-                            
                             &:-ms-input-placeholder { /* Internet Explorer 10-11 */
-                                color: black;
+                                color: var(--color-input-placeholder);
                             }
-                            
                             &::-ms-input-placeholder { /* Microsoft Edge */
-                                color: black;
+                                color: var(--color-input-placeholder);
                             }
                         }
                         & > button {
