--- a/src/features/country-details/styles.module.scss
+++ b/src/features/country-details/styles.module.scss
@@ -46,10 +46,11 @@
                     cursor: pointer;
                     overflow: hidden;
                     background-color: rgba(255, 255, 255, .3);
+                    aspect-ratio: 1 / 1;
 
                     & img {
+                        width: 100%;
                         height: 100%;
-                        aspect-ratio: 1 / 1;
                         object-fit: cover;
 
                         transition: filter .2s ease-in-out;
