--- a/src/assets/base.scss
+++ b/src/assets/base.scss
@@ -76,6 +76,7 @@ body {
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow-x: hidden;
 
   &.prevent-scroll {
     overflow: hidden;
