--- a/src/components/Typography/styles.module.scss
+++ b/src/components/Typography/styles.module.scss
@@ -27,6 +27,10 @@
     font-size: 22px;
     line-height: 27px;
     color: var(--color-text);
+
+    &[dark] {
+        color: var(--black);
+    }
 }
 .h5 {
     font-family: 'Montserrat-Bold';
@@ -34,6 +38,10 @@
     font-size: 16px;
     line-height: 20px;
     color: var(--color-text);
+
+    &[dark] {
+        color: var(--black);
+    }
 }
 .body {
     font-family: 'Montserrat-Regular';
@@ -42,6 +50,10 @@
     line-height: 150%;
     letter-spacing: 0.05em;
     color: var(--color-text-secondary);
+
+    &[dark] {
+        color: var(--black);
+    }
 }
 .button {
     font-family: 'Montserrat-Bold';
@@ -57,4 +69,8 @@
     line-height: 24px;
     text-transform: uppercase;
     color: var(--color-text);
+
+    &[dark] {
+        color: var(--black);
+    }
 }
