payment modal popup refactoring

--- a/src/components/Popup/styles.module.scss
+++ b/src/components/Popup/styles.module.scss
@@ -1,21 +1,21 @@
 .popup {
-    --popup-height: 500px;
-
     position: fixed;
     top: var(--popup-top-position);
+    bottom: -25vh;
     left: var(--popup-left-position);
     z-index: 500;
-    overflow: hidden;
 
     width: var(--popup-width);
     height: calc(var(--popup-height) * .2);
     opacity: 0;
-    transition: all .3s ease-in-out;
-    transform: scale(.3);
-    transform-origin: top right;
-
     background: rgba(255, 255, 255, .6);
     backdrop-filter: blur(15px);
+    transition: all .3s ease-in-out, top 0s;
+    transform: scale(.3);
+    filter: blur(5px);
+    transform-origin: top right;
+
+    overflow: hidden;
     border-radius: 10px;
 
     &.open {
@@ -23,9 +23,66 @@
         border-radius: 10px;
         opacity: 1;
         transform: scale(1);
+        filter: blur(0);
+        transition: all .3s ease-in-out, top 0s, translate 0s;
     }
     & > .wrapper {
-        width: var(--popup-width);
-        height: var(--popup-height);
+        --spaces: 15px;
+
+        display: flex;
+        flex-direction: column;
+
+        width: 100%;
+        height: 100%;
+
+        & > .title {
+            flex: 1;
+            text-align: center;
+            padding: var(--spaces);
+            border-bottom: 1px solid rgba(0, 0, 0, .1);
+        }
+        & > .content {
+            height: 100%;
+            overflow: auto;
+            flex: auto;
+
+            -ms-overflow-style: none;  /* IE and Edge */
+            scrollbar-width: none;  /* Firefox */
+            &::-webkit-scrollbar {
+                display: none;
+            }
+
+            --mask-height: 15px;
+
+            padding: var(--spaces);
+            padding-block: var(--mask-height);
+
+            --mask-image-content: linear-gradient(
+                to bottom,
+                transparent,
+                black var(--mask-height),
+                black calc(100% - var(--mask-height)),
+                transparent
+            );
+            --mask-size-content: 100%;
+
+            mask-image: var(--mask-image-content);
+            mask-size: var(--mask-size-content);
+            -webkit-mask-image: var(--mask-image-content);
+            -webkit-mask-size: var(--mask-size-content);
+
+            mask-position: 0 0;
+            mask-repeat: no-repeat;
+            -webkit-mask-position: 0 0;
+            -webkit-mask-repeat: no-repeat;
+        }
+        & > .footer {
+            // position: sticky;
+            // bottom: 0;
+
+            background: rgba(210, 210, 210, .2);
+            border-top: 1px solid rgba(0, 0, 0, .1);
+            padding: var(--spaces);
+        }
     }
 }
