--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -46,6 +46,20 @@ a {
   position: relative;
 }
 
+.flex {
+  display: flex;
+
+  &.align-center {
+    align-items: center;
+  }
+  &.justify-center {
+    justify-content: center;
+  }
+  &.justify-between {
+    justify-content: space-between;
+  }
+}
+
 
 // Transitions
 
@@ -72,7 +86,7 @@ a {
   &-enter-from,
   &-leave-to {
       opacity: 0;
-      filter: blur(3px);
+      filter: blur(6px);
   }
 }
 
