--- a/src/features/country-details/modals/PaymentModal/components/PriceListPopupItem/styles.module.scss
+++ b/src/features/country-details/modals/PaymentModal/components/PriceListPopupItem/styles.module.scss
@@ -16,7 +16,7 @@
         justify-content: space-between;
         // margin-bottom: 13px;
 
-        .count-block {
+        & > .count-block {
             display: flex;
             justify-content: flex-end;
             gap: 30px;
@@ -27,10 +27,5 @@
         display: flex;
         flex-direction: column;
         row-gap: 10px;
-    }
-
-    & > .stars-container {
-        display: flex;
-        column-gap: 5px;
     }
 }
