--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -39,6 +39,12 @@ a {
 
 
 
+.scrollbar-hidden {
+  &::-webkit-scrollbar { display: none; }
+}
+
+
+
 .absolute {
   position: absolute;
 }
@@ -57,6 +63,15 @@ a {
   }
   &.justify-between {
     justify-content: space-between;
+  }
+  &.row {
+    flex-direction: row;
+  }
+  &.column {
+    flex-direction: column;
+  }
+  &.g {
+    &-1 { gap: 10px; }
   }
 }
 
