--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -16,8 +16,24 @@
     z-index: 100;
 
     & .logo-title {
+        display: flex;
+        align-items: center;
         position: absolute;
-        color: var(--color-text);
+        // color: var(--color-text);
+
+        // & > h2 {
+        //     background: linear-gradient(90deg, rgba(255, 255, 255, 0.64) 0%, rgba(235, 235, 235, 0.40) 100%);
+        //     background-clip: text;
+        //     -webkit-background-clip: text;
+        //     -webkit-text-fill-color: transparent;
+
+        //     text-shadow: 5px 0px 10px 0px rgba(0, 0, 0, 0.25);
+        //     font-family: Inter;
+        //     font-size: 25px;
+        //     font-style: normal;
+        //     font-weight: 700;
+        //     line-height: normal;
+        // }
     }
 }
 
