netlify bg images fix

--- a/src/components/Section/styles.module.scss
+++ b/src/components/Section/styles.module.scss
@@ -5,6 +5,7 @@
 
     @include main-container;
 
+    background-image: url('@/assets/images/bg/home.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
