--- a/src/components/Section/styles.module.scss
+++ b/src/components/Section/styles.module.scss
@@ -5,7 +5,7 @@
 
     @include main-container;
 
-    background-image: url(var(--bg-image-path));
+    background-image: url('var(--bg-image-path)');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
